resolved grid overflow issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -163,6 +163,9 @@ options and card sections
     grid-template-columns: repeat(3, 1fr);
     gap: 3%;
     width: 100%;
+    overflow: scroll;
+    padding-bottom: 10%;
+
 }
 
 /*-------------------------- 
@@ -170,6 +173,9 @@ Start: blog-card */
 .blog-card {
     border-radius: 10px;
     box-shadow: 0 0 10px rgb(194, 188, 188);
+    display: flex;
+    flex-direction: column;
+
 }
 
 .blog-card img {
